# fast-bitap

./: CMakeLists.txt  Makefile  README.md  benchmark.py  bitap_base.cpp  bitap_dp.cpp  bitap_flipped.cpp  driver.cpp  helper.cpp  include.h  pattern.txt  text.txt
alignment_dataset/medium/: 1.fasta  2.fasta
alignment_dataset/small/test_1/: 2.fasta
alignment_dataset/small/test_2/: 1.fasta  2.fasta
alignment_dataset/small/test_3/: 1.fasta  2.fasta
alignment_dataset/small/test_4/: 1.fasta  2.fasta
sequences/: large_p.txt  med_t.txt  temp.txt
